// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button is styled correctly when type is bare and disabled 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: rgba(255,255,255,0);
  color: #777777;
  box-shadow: 0;
  padding: 10px 12px 8px 12px;
}

.c0:hover {
  cursor: default;
}

.c0:focus {
  border: 0;
}

<button
  className="c0"
  color="#777777"
  cursor="default"
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`Button is styled correctly when type is bare and enabled 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: rgba(255,255,255,0);
  color: #333333;
  box-shadow: 0;
  padding: 10px 12px 8px 12px;
}

.c0:hover {
  cursor: cursor;
}

.c0:focus {
  border: 0;
}

<button
  className="c0"
  color="#333333"
  cursor="cursor"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`Button is styled correctly when type is green and disabled 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: #A7AFB2;
  color: #FFFFFF;
  box-shadow: 0;
  padding: 10px 12px 8px 12px;
}

.c0:hover {
  cursor: default;
}

.c0:focus {
  border: 0;
}

<button
  className="c0"
  color="#FFFFFF"
  cursor="default"
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`Button is styled correctly when type is green and enabled 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: #85B554;
  color: #FFFFFF;
  box-shadow: 0 2px 4px #cccccc;
  padding: 10px 12px 8px 12px;
}

.c0:hover {
  cursor: cursor;
}

.c0:focus {
  border: 0;
}

<button
  className="c0"
  color="#FFFFFF"
  cursor="cursor"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`Button is styled correctly when type is normal and disabled 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: #A7AFB2;
  color: #FFFFFF;
  box-shadow: 0;
  padding: 10px 12px 8px 12px;
}

.c0:hover {
  cursor: default;
}

.c0:focus {
  border: 0;
}

<button
  className="c0"
  color="#FFFFFF"
  cursor="default"
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`Button is styled correctly when type is normal and endabled 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: #333333;
  color: #FFFFFF;
  box-shadow: 0 2px 4px #cccccc;
  padding: 10px 12px 8px 12px;
}

.c0:hover {
  cursor: cursor;
}

.c0:focus {
  border: 0;
}

<button
  className="c0"
  color="#FFFFFF"
  cursor="cursor"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`Button is styled correctly when type is normal and endabled 2`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: #333333;
  color: #FFFFFF;
  box-shadow: 0 2px 4px #cccccc;
  padding: 10px 12px 8px 12px;
}

.c0:hover {
  cursor: cursor;
}

.c0:focus {
  border: 0;
}

<button
  className="c0"
  color="#FFFFFF"
  cursor="cursor"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`Button is styled correctly when type is red and disabled 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: #A7AFB2;
  color: #FFFFFF;
  box-shadow: 0;
  padding: 10px 12px 8px 12px;
}

.c0:hover {
  cursor: default;
}

.c0:focus {
  border: 0;
}

<button
  className="c0"
  color="#FFFFFF"
  cursor="default"
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`Button is styled correctly when type is red and endabled 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: #9B3E38;
  color: #FFFFFF;
  box-shadow: 0 2px 4px #cccccc;
  padding: 10px 12px 8px 12px;
}

.c0:hover {
  cursor: cursor;
}

.c0:focus {
  border: 0;
}

<button
  className="c0"
  color="#FFFFFF"
  cursor="cursor"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`Button is styled correctly when type is small-bare and disabled 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: rgba(255,255,255,0);
  color: #777777;
  box-shadow: 0;
  padding: 6px 17px 4px 17px;
}

.c0:hover {
  cursor: default;
}

.c0:focus {
  border: 0;
}

<button
  className="c0"
  color="#777777"
  cursor="default"
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`Button is styled correctly when type is small-bare and enabled 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: rgba(255,255,255,0);
  color: #333333;
  box-shadow: 0;
  padding: 6px 17px 4px 17px;
}

.c0:hover {
  cursor: cursor;
}

.c0:focus {
  border: 0;
}

<button
  className="c0"
  color="#333333"
  cursor="cursor"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`Button is styled correctly when type is small-green and enabled 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: #85B554;
  color: #FFFFFF;
  box-shadow: 0 2px 4px #cccccc;
  padding: 6px 17px 4px 17px;
}

.c0:hover {
  cursor: cursor;
}

.c0:focus {
  border: 0;
}

<button
  className="c0"
  color="#FFFFFF"
  cursor="cursor"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`Button is styled correctly when type is small-green disabled 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: #A7AFB2;
  color: #FFFFFF;
  box-shadow: 0;
  padding: 6px 17px 4px 17px;
}

.c0:hover {
  cursor: default;
}

.c0:focus {
  border: 0;
}

<button
  className="c0"
  color="#FFFFFF"
  cursor="default"
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`Button is styled correctly when type is small-normal and disabled 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: #A7AFB2;
  color: #FFFFFF;
  box-shadow: 0;
  padding: 6px 17px 4px 17px;
}

.c0:hover {
  cursor: default;
}

.c0:focus {
  border: 0;
}

<button
  className="c0"
  color="#FFFFFF"
  cursor="default"
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`Button is styled correctly when type is small-normal and enabled 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: #333333;
  color: #FFFFFF;
  box-shadow: 0 2px 4px #cccccc;
  padding: 6px 17px 4px 17px;
}

.c0:hover {
  cursor: cursor;
}

.c0:focus {
  border: 0;
}

<button
  className="c0"
  color="#FFFFFF"
  cursor="cursor"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`Button is styled correctly when type is small-red and disabled 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: #A7AFB2;
  color: #FFFFFF;
  box-shadow: 0;
  padding: 6px 17px 4px 17px;
}

.c0:hover {
  cursor: default;
}

.c0:focus {
  border: 0;
}

<button
  className="c0"
  color="#FFFFFF"
  cursor="default"
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`Button is styled correctly when type is small-red and enabled 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: #9B3E38;
  color: #FFFFFF;
  box-shadow: 0 2px 4px #cccccc;
  padding: 6px 17px 4px 17px;
}

.c0:hover {
  cursor: cursor;
}

.c0:focus {
  border: 0;
}

<button
  className="c0"
  color="#FFFFFF"
  cursor="cursor"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;
